--- a/mudule4/index.html
+++ b/mudule4/index.html
@@ -5,5 +5,10 @@
 </head>
 <body>
     <a href="https://www.lipsum.com/">lipsum</a>
+<hr>
+    <a href="https://shkolladigjitale.com/" target="_blank">shkolla digjitale </a>
+<hr>
+    <a href="kozemetik.html">KOZEMETIK</a>
+    <img src="image/DSC02157.webp" alt="pc" width="500px" height="500px">
 </body>
 </html>
