--- a/MODUL5/index.html
+++ b/MODUL5/index.html
@@ -52,5 +52,30 @@
         <li>nurilinda</li>
         <li>edlira</li>
     </ul>
+    <dl>
+        <dt>shkolla digjitale</dt>
+        <dd>ni shkolle ku msojne programime</dd>
+        <dt>kumpjuteri</dt>
+        <dd contenteditable="true">nje paisje e meqme</dd>
+    </dl>
+     <ol type="I" start="5">
+        <li>milk</li>
+        <li>bred</li>
+        <li>water</li>
+        <li>ketchoup</li>
+    </ol>
+    <ul type="none">
+        <li>milk</li>
+        <li>bred</li>
+        <li>water</li>
+        <li>ketchoup</li>
+    </ul>
+    <h1 contenteditable="true">tshtunen kane  me lshu filum</h1>
+    <label>task complition</label>
+    <progress value="10" max="100"></progress>
+      
+    <label>value</label>
+     <meter value="10" min="0" max="100"></meter>
+
 </body>
 </html>
