--- a/MODUL6/index.html
+++ b/MODUL6/index.html
@@ -15,7 +15,7 @@
     <video width="200" height="230"controls autoplay>
         <source src="video.mp4" type="video/mp4">
     </video>
-<audio controls> <source src="DON XHONI - KATILE.mp3"type="audio/mpeg" ></audio> -->
+<audio controls> <source src="DON XHONI - KATILE.mp3"type="audio/mpeg" ></audio> 
  <iframe src="https://digitalschool.eu/"title="iframe of digital school" width="1500" height="1500"></iframe>
 <iframe src="https://www.youtube.com/watch?v=CYw5qmETd3Q"title="loje basketit" width="1500" height="1500"></iframe>
 </body>
