--- a/MODUL7/index.html
+++ b/MODUL7/index.html
@@ -46,5 +46,24 @@
 
         <input type="submit" id="submit" name="submit">
     </form>
+    <article>
+        <h3>hello</h3>
+        <p> fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use <sup>Lorem Ipsum</sup> as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose <ins>(injected humour and the like)</p>
+    </article>
+    <details>
+        <summary>shkolla digjitale</summary>
+
+        <p>kurs per kod</p>
+    </details>
+    <figure>
+        <img src="juanjo-jaramillo-mZnx9429i94-unsplash-1024x683.jpg" width="250" height="250">
+        <figcaption>fig1: programime</figcaption>
+    </figure>
+    <section>
+        <h1>intro</h1>
+          <p> fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use <sup>Lorem Ipsum</sup> as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose <ins>(injected humour and the like)</p>
+          <img src="juanjo-jaramillo-mZnx9429i94-unsplash-1024x683.jpg" width="250" height="250">  
+    </section>
+    
 </body>
 </html>
