--- a/module8/index.html
+++ b/module8/index.html
@@ -6,6 +6,14 @@
 
 </head>
 <body>
+    <nav>
+        <ul>
+            <a href="index.html">HOME</a>
+            <a href="aboutus.html">ABOUT US</a>
+            <a href="products.html">PRODUCTS</a>
+            <a href="contact.html">CONTACT</a>
+        </ul>
+    </nav>
     <svg width="100" height="100"> <circle cx="50" cy="50" r="40" fill="rgb(0,0,0) "; stroke-width="10"; stroke="rgb(07,26,209)"></svg>
 
         <svg width="400" height="400"> 
@@ -15,6 +23,7 @@
         <svg width="500" height="500"> 
             <rect rx="10" ry="10" x="10"  y="10" width="100" height="90"style="stroke-width:10; stroke:rgb(07,26,209);fill:blue;opacity:0.5;"></rect></svg>
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#0099ff" fill-opacity="1" d="M0,96L0,256L1440,256L1440,320L0,320L0,320Z"></path></svg>
+            
             <footer><p>digitalschoole</p></footer>
 </body>
 </html>
