--- a/MODULE10/index.html
+++ b/MODULE10/index.html
@@ -40,7 +40,16 @@
         </div>
      </main>
      <footer>
-        <p>this is footer</p>
+        <p>+38345123456</p>
+        <p>NEWS@GMAIL.COM</p>
+
+        <ul>
+            <li><a href="https://www.facebook.com/">FACEBOOK</a></li>
+            <li><a href="https://www.instagram.com/">INSTAGRAM</a></li>
+            <li><a href="https://www.tiktok.com/">TIKTOK</a></li>
+
+        </ul>
+
      </footer>
 </body>
 </html>
