--- a/MODUL14/index.html
+++ b/MODUL14/index.html
@@ -7,6 +7,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <nav>
+   <a href="index.html">home</a>
+   <a href="contact.html">contact us</a>
+   <a href="about.html">about us </a>
+  </nav>
     <article>
         <p>paragrafi 1 ne artikull</p>
         <p>paragrafi 2 ne artikull</p>
@@ -25,6 +30,6 @@
         <p>paragrafi 3 ne artikull</p>
 
       </main>
-      <a href="https://digitalschool.eu/">LINK 1</a>
+      <a href="https://digitalschool.eu/" id="link">LINK 1</a>
 </body>
 </html>
