--- a/modul15/index.html
+++ b/modul15/index.html
@@ -7,6 +7,21 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <nav id="horizontal">
+    <ul>
+      <img src="foto4.jpg" alt="logo" width="50px"height="50px">
+      <li><a href="index.html">home page</a></li>
+      <li><a href="produktet.html">produkte</a></li>
+      <li><a href="news.html">news</a></li>
+    </ul>
+    <nav id="vertikal">
+    <ul>
+      <img src="foto4.jpg" alt="logo" width="50px"height="50px">
+      <li><a href="index.html">home page</a></li>
+      <li><a href="produktet.html">produkte</a></li>
+      <li><a href="news.html">news</a></li>
+    </ul>
+  </nav>
     <div id="div1">
       position1
     </div>
@@ -17,6 +32,11 @@
       
     <div id="div3">
       position3
+    </div>
+    <div id="parent">
+      <div id="chid">
+        pozition4
+      </div>
     </div>
 </body>
 </html>
