--- a/modul15/index.html
+++ b/modul15/index.html
@@ -14,6 +14,7 @@
       <li><a href="produktet.html">produkte</a></li>
       <li><a href="news.html">news</a></li>
     </ul>
+  </nav>
     <nav id="vertikal">
     <ul>
       <img src="foto4.jpg" alt="logo" width="50px"height="50px">
@@ -21,6 +22,26 @@
       <li><a href="produktet.html">produkte</a></li>
       <li><a href="news.html">news</a></li>
     </ul>
+  </nav>
+
+  <nav id="dropdown">
+      <a href="index.html">home</a>
+      <a href="news.html">news</a>
+      <div id="nav-dropdown">
+        <button id="dropdownbtn">produkts</button>
+         <div id="dropdown-content">
+           <div id="row">
+            <div id="columen">
+                <h3>submenu</h3>
+                <a href="#">parfim</a>
+                <a href="#">kuleta</a>
+                <a href="#">qanta</a>
+
+            </div>
+           </div>
+         </div>
+      </div>
+
   </nav>
     <div id="div1">
       position1
