--- a/PERSERITJE2/index.html
+++ b/PERSERITJE2/index.html
@@ -9,13 +9,28 @@
 <body>
     <header>
         <nav>
-            <img src="logo-removebg-preview.png"alt="logo">
+            <img src="iPhone-Logo-2007.png"alt="logo" width="100" height="50">
             <ul>
                 <li><a href="index.html">HOME</a></li>
-                <li><a href="#"></a></li>
-                <li><a href="#"></a></li>
+                <li><a href="serves.html">serves</a></li>
+                <li><a href="contectus.html">contect us</a></li>
             </ul>
         </nav>
     </header>
+    <div class="Gallery">
+        <a target="_blank" href="HERO banner.png">
+            <img src="HERO banner.png" alt="hero banner" id="baner">
+            <h1 id="slogan">THE BEST IPHONS ON THE MARKET</h1>
+        </a>
+    </div>
+    <br>
+
+        <div class="gallery">
+        <a target="_blank" href="Apple-iPhone-17-Pro-Max-Cosmic-Orange.webp">
+            <img src="Apple-iPhone-17-Pro-Max-Cosmic-Orange.webp" alt="foto1" width="600" height="400"></a>
+        <div class="desc">iphone 17 $800</div>
+    </div>
+
+    </div>
 </body>
 </html>
