--- a/perseritje3/index.html
+++ b/perseritje3/index.html
@@ -21,5 +21,58 @@
         </nav>
         </div>
     </header>
+
+    <section class="hero">
+        <h1 id="hero_title">Modern essentials for evryday life</h1>
+        <p id="hero_p">A beginner-friendly e-commerde website</p>
+        <img id="hero_img"  src="images.jfif" alt="hero baner" width="80%" height="600px">
+    </section>
+          <div class="container">
+             <div class="stats">
+                <p class="stat_value">4.9/5</p>
+                <p class="stat_label">Our customers</p>
+             </div>
+            <div class="stats">
+                <p class="stat_value">1-3</p>
+                <p class="stat_label">Days delivery</p>
+             </div>
+            <div class="stats">
+                <p class="stat_value">30</p>
+                <p class="stat_label">Days return</p>
+             </div>
+          </div>
+
+      <section id="bestsellers">
+        <h2 id="bestsellers_title">BEST SELLERS</h2>
+        <div id="product-grid">
+           <div class="product-card">
+            <img src="backpack.jfif" alt="Product 1">
+            <h3>Backpack</h3>
+            <p>Description of Product 1</p>
+            <button>View</button>
+           </div> 
+
+            <div class="product-card">
+            <img src="gaming table.jfif" alt="Product 2">
+            <h3>Gaming Table</h3>
+            <p>Description of Product 2</p>
+            <button>View</button>
+           </div> 
+
+            <div class="product-card">
+            <img src="kaybord.jfif" alt="Product 3">
+            <h3>Keyboard</h3>
+            <p>Description of Product 3</p>
+            <button>View</button>
+           </div> 
+
+            <div class="product-card">
+            <img src="mous.jfif" alt="Product 4">
+            <h3>Mouse</h3>
+            <p>Description of Product 4</p>
+            <button>View</button>
+           </div> 
+        </div>
+      </section>    
 </body>
 </html>
